--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,17 @@
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
+  <div class='user-stats'>
+    <span style='margin-right: 8px;'>
+      <strong id='following' class='stat' style='color: #7B7B7B;'>following: <%= user.following.count %></strong>
+    </span>
+    <span style='color: #BEBEBE;'>|</span>
+    <span style='margin-left: 8px;'>
+      <strong id='followers' class='stat' style='color: #7B7B7B;'>followers: <%= user.followers.count %></strong>
+    </span>
+  </div>
   <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, data: { "turbo-method": :delete,
+     <%= link_to "delete", user, data: { "turbo-method": :delete,
                                           turbo_confirm: "You sure?" } %>
   <% end %>
 </li>
