--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       </h1>
       <% if @user.introduction.present? %>
         <p>
-          <strong>个人简介:</strong><br>
+          <strong>自己紹介:</strong><br>
           <%= @user.introduction %>
         </p>
       <% end %>
