Isuue#5 固定マイクロポスト機能の実装(固定したマイクロポストの色を変更)

--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,7 +1,15 @@
+<style>
+  .pinned {
+    background-color: #fff8dc;
+    border-left: 4px solid #f0c000;
+  }
+</style>
 <% if @feed_items.any? %>
   <ol class="microposts">
   <% if @pinned_micropost %>
+    <div class="pinned">
     <%= render partial: "microposts/micropost", locals: {micropost: @pinned_micropost}%>
+    </div>
   <% end %>
     <%= render @feed_items %>
   </ol>
