--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
+<style>
+  .pinned {
+    background-color: #fff8dc;
+    border-left: 4px solid #f0c000;
+  }
+</style>
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-4">
@@ -23,7 +29,9 @@
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
         <% if @pinned_micropost %>
+          <div class="pinned">
           <%= render partial: "microposts/micropost", locals: {micropost: @pinned_micropost}%>
+          </div>
         <% end %>
         <%= render @microposts %>
       </ol>
