--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,27 @@
  *= require_tree .
  *= require_self
  */
+
+.interaction {
+  display: flex; 
+  justify-content: space-between; 
+  width: 100%; 
+  margin-top: 5px;
+  color: #2d2d2d;
+  font-weight: 550;
+}
+
+.pressed {
+  opacity:0.7;
+  color: #ff2424;
+}
+
+.pressed2 {
+  opacity:0.7;
+  color: #002ec4;
+}
+
+.pressed3 {
+  opacity:0.7;
+  color: #ff8400;
+}
