--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,13 +14,43 @@
  *= require_self
  */
 
-.interaction {
-  display: flex; 
-  justify-content: space-between; 
-  width: 100%; 
-  margin-top: 5px;
+
+.row {
+  display: flex;
   color: #2d2d2d;
   font-weight: 550;
+}
+
+.interaction {
+  display: flex;
+  margin-top: 5px;
+  margin-left: 15px;
+  flex: 0 0 65%; 
+  justify-content: space-between;
+}
+
+.interaction2 {
+  display: flex;
+  margin-top: 3px;
+  margin-left: 130px;
+  flex: 0 0 35%;
+}
+
+.comment-box {
+  margin-top: 15px;
+}
+
+.save-comment {
+  background-color: #2175bc; 
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .pressed {
