--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,9 @@
     <section class="stats">
       <%= render 'shared/stats' %>
     </section>
+    <section>
+      <%= link_to "いいねした投稿", likes_user_path(@user) %>
+    </section>
   </aside>
   <div class="col-md-8">
     <%= render 'follow_form' if logged_in? %>
