UIのズレの修正

--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: "microposts/micropost", collection: @like_microposts %>
+<ol class = "microposts">
+  <%= render partial: "microposts/micropost", collection: @like_microposts %>
+</ol>
