--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? && micropost.favorite_by?(current_user)%>
-  <%=link_to image_tag("star_fill.png",size: '20x20'), micropost_favorites_path(micropost.id),  data: { turbo_method: :delete }, class: "micropost_favorites" %>
+  <%=link_to image_tag("star_fill.png",size: '20x20'), micropost_favorites_path(micropost.id),  data: { turbo_method: :delete }, class: "micropost_favorites" %> favorite
 <% else %>
-  <%=link_to image_tag("star_blank.png",size: '20x20'), micropost_favorites_path(micropost.id), data: { turbo_method: :post }, class: "micropost_favorites" %>
+  <%=link_to image_tag("star_blank.png",size: '20x20'), micropost_favorites_path(micropost.id), data: { turbo_method: :post }, class: "micropost_favorites" %> favorite
 <% end %>
